# sortify

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY_ANALYSIS_REPORT.md  copilotkit.md  docker-compose.yml  start_dev.ps1  todo.md
backend/: .gitignore  AI_STABILITY_ANALYSIS_REPORT.md  Dockerfile  MODIFICATION_PLAN.md  __init__.py  example.env  pyproject.toml  pytest.ini  requirements.txt  requirements_backup.txt  test_output.txt
backend/app/: copilot_setup.py  dependencies.py  main.py
backend/app/apis/: __init__.py
backend/app/apis/v1/: __init__.py  auth.py  cache_monitoring.py  clustering.py  conversations.py  dashboard.py  device_auth.py  documents.py  embedding.py  evaluation.py  gmail.py  logs.py  qa_analytics.py  qa_stream.py  suggested_questions.py  system.py  unified_ai.py  users.py  vector_db.py
backend/app/core/: __init__.py  config.py  device_config.py  device_security.py  exceptions.py  logging_decorators.py  logging_utils.py  middleware.py  ownership_checker.py  password_utils.py  resource_helpers.py  security.py  startup.py
backend/app/crud/: __init__.py  crud_conversations.py  crud_dashboard.py  crud_device_tokens.py  crud_documents.py  crud_logs.py  crud_settings.py  crud_suggested_questions.py  crud_users.py
backend/app/db/: db_init.py  mongodb_utils.py
backend/app/models/: __init__.py  ai_models_simplified.py  background_task_models.py  clustering_models.py  context_config.py  conversation_models.py  dashboard_models.py  device_token_models.py  document_models.py  email_models.py  error_models.py  log_models.py  question_models.py  response_models.py  suggested_question_models.py  system_models.py  token_models.py  user_models.py  vector_models.py
backend/app/services/: __init__.py  accuracy_evaluation_service.py  ai_cache_manager.py  background_task_manager.py  clustering_service.py  conversation_cache_service.py  document_processing_service.py  document_tasks_service.py  embedding_service.py  enhanced_ai_qa_service.py  enhanced_search_service.py  entity_extraction_service.py  gmail_service.py  google_context_cache_service.py  prompt_manager_simplified.py  qa_orchestrator.py  semantic_summary_service.py  unified_ai_config.py  unified_ai_service_simplified.py  vector_db_service.py
backend/app/services/ai/: __init__.py  ai_cache_manager.py  prompt_manager_simplified.py  suggested_questions_generator.py  unified_ai_config.py  unified_ai_service_simplified.py  (+1 more)
backend/app/utils/: __init__.py  document_data_helpers.py  file_handling_utils.py  text_processing.py
backend/docs/refactoring/: AI_API_REDESIGN_TODO.md  API_COMPARISON_ANALYSIS.md  CRITICAL_ISSUES_SUMMARY.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  SERVICES_DUPLICATION_ANALYSIS.md
backend/scripts/: batch_reanalyze.py  test_citation_reference.py  test_context_evaluation.py  test_qa_debug.py  test_qa_full_api.py  test_qa_real_flow.py  test_qa_stream_flow.py
backend/tests/: README.md  conftest.py  run_chromadb_test.py  run_performance_test.py  test_conversation_context_integration.py  test_intelligent_qa_routing.py  test_ownership_checker.py  test_question_classifier.py  test_resource_helpers.py
backend/tests/api/: __init__.py
backend/tests/integration/: README.md  conftest.py  test_ai_qa_flow_with_mock.py  test_auth_api.py  test_conversation_permissions.py  test_conversations_api.py  test_document_permissions.py  test_documents_api.py  test_system_api.py  test_users_api.py  test_vector_db_api.py
backend/tests/services/: __init__.py  test_accuracy_evaluation_service.py  test_cluster_label_generation.py  test_document_tasks_service.py  test_enhanced_ai_qa_service.py  test_semantic_summary_service.py
backend/tests/unit/: conftest.py  test_qa_services.py
backend/tests/utils/: __init__.py  test_file_handling_utils.py
(+276 files in other folders)
