[project]
name = "backend"
version = "0.1.0"
description = "AI 文件助理的後端伺服器，負責處理文件、AI 分析和 API 服務。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ===== 核心 Web 框架 =====
    "fastapi>=0.115.9",
    "uvicorn[standard]>=0.34.3",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.9.1",
    "starlette>=0.45.3",
    "python-multipart>=0.0.20",
    
    # ===== 數據庫 =====
    "motor>=3.7.1",
    "pymongo>=4.12.1",
    "redis>=6.4.0",
    "chromadb>=1.0.12",
    
    # ===== AI/ML 核心 =====
    # 注意：PyTorch 使用 GPU 版本（CUDA 12.4），從自定義索引安裝
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "sentence-transformers>=2.2.2,<3.0.0",
    "transformers>=4.35.0,<4.36.0",
    "tokenizers>=0.15.0,<0.16.0",
    "scikit-learn>=1.6.1",
    "hdbscan>=0.8.40",
    "numpy>=2.2.6",
    
    # ===== Google API 集成 =====
    "google-api-python-client>=2.170.0",
    "google-auth-oauthlib>=1.2.2",
    "google-generativeai>=0.8.0",
    
    # ===== 文件處理 =====
    "PyMuPDF>=1.26.0",
    "python-docx>=1.1.2",
    "pillow>=11.2.1",
    "aiofiles>=24.1.0",
    
    # ===== Web 工具 =====
    "werkzeug>=3.1.3",
    
    # ===== 安全與認證 =====
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",  # 限制 bcrypt < 5.0（與 passlib 1.7.4 兼容）
    
    # ===== 通用工具 =====
    "python-dotenv>=1.1.0",
    "cachetools>=5.5.2",
    "tenacity>=9.1.2",
    "pytz>=2025.1",
]

[project.optional-dependencies]
# 測試依賴
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
]

# 開發工具
dev = [
    "playwright>=1.55.0",
]

# ===== UV 配置 =====
[tool.uv]
# PyTorch 來源配置 - 默認使用 GPU (CUDA 12.4) 索引
[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }
torchaudio = { index = "pytorch-gpu" }

# PyTorch GPU (CUDA 12.4) 索引
[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# ===== Pytest 配置 =====
[tool.pytest.ini_options]
# asyncio_mode = "auto" # 移除此行，因為 pytest-asyncio 通常會自動處理或默認為 auto
# 如果需要，可以添加其他 pytest 選項，例如:
addopts = "-ra -q --show-capture=no" # -ra: 顯示詳細的失敗信息, -q: 安靜模式, --show-capture=no: 不捕獲標準輸出
testpaths = [
    "tests",
]
pythonpath = [
    ".",
    ".."
]
markers = [
    "asyncio: 標記異步測試 (由 pytest-asyncio 提供)",
]
